# GameArt

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODEOWNERS  LICENSE  README.md  inputs.py  pyproject.toml
.github/workflows/: pull_request_checks.yml  python-package.yml  releases.yml
src/gameart/: FileHandler.py  api.py  cli.py  gui.py
src/gameart/draw/: art.py
src/gameart/inputs/: keylogger.py  mousetracker.py
src/gameart/utils/: utils.py
tests/: test_FileHandler.py  test_art.py  test_gui.py  test_keylogger.py  test_utils.py
