[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gameart"
version = "0.0.4"
authors = [
  { name="Andreas Schneider", email="author@example.com" },
]
description = "Create printable art from your mouse movement."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  'fire >= 0.5.0',
  'matplotlib >=3.8.0',
  'pandas >= 2.1.1',
  'pynput >= 1.7.6',
  'pytest >= 7.4.2',
  'pre-commit >= 3.5.0'
]

[project.scripts]
gameart = "gameart.cli:main"

[project.urls]
Repository = "https://github.com/AndManGames/GameArt"
"Bug Tracker" = "https://github.com/AndManGames/GameArt/issues"

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.env
| \.venv
| \.venv_gameart
| _build
| buck-out
| build
)/
'''

[tool.flake8]
max-line-length = 79
exclude = [".git", "__pycache__", "dist", "env", "venv", "venv_gameart"]

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true

[tool.mypy]
exclude = ["env", "venv", "venv_gameart"]
